generic crud, completed, country service and handler refactored and tested (except getting countries by filter)
