# src/api/dto/country.go
@@ -1,21 +1,27 @@
 package dto
 
-type CreateAndUpdateCountryRequest struct{
+import "github.com/Aliizi83/sample-golang-project/src/services/dto"
+
+type CreateUpdateCountryRequest struct {
 	Name string `json:"name" binding:"required,alpha,min=3,max=20"`
 }
 
 type CountryResponse struct {
-	Id     int            `json:"id"`
-	Name   string         `json:"name"`
-	Cities []CityResponse `json:"cities,omitempty"`
+	Id        int               `json:"id"`
+	Name      string            `json:"name"`
+	Cities    []CityResponse    `json:"cities,omitempty"`
+	Companies []CompanyResponse `json:"companies,omitempty"`
 }
 
-type CreateUpdateCityRequest struct {
-	Name string `json:"name" binding:"required,alpha,min=3,max=20"`
+func ToCountryResponse(from dto.Country) CountryResponse {
+	return CountryResponse{
+		Id:   from.Id,
+		Name: from.Name,
+	}
 }
 
-type CityResponse struct {
-	Id      int             `json:"id"`
-	Name    string          `json:"name"`
-	Country CountryResponse `json:"country"`
+func ToCreateUpdateCountry(from CreateUpdateCountryRequest) dto.Name {
+	return dto.Name{
+		Name: from.Name,
+	}
 }
