# src/api/handlers/country.go
@@ -1,12 +1,11 @@
 package handlers
 
 import (
-	"net/http"
-	"strconv"
-
 	"github.com/Aliizi83/sample-golang-project/src/api/dto"
-	"github.com/Aliizi83/sample-golang-project/src/api/helpers"
+	_ "github.com/Aliizi83/sample-golang-project/src/api/helpers"
 	"github.com/Aliizi83/sample-golang-project/src/config"
+	dependencies "github.com/Aliizi83/sample-golang-project/src/dependenies"
+	_ "github.com/Aliizi83/sample-golang-project/src/domain/filters"
 	"github.com/Aliizi83/sample-golang-project/src/pkg/logging"
 	"github.com/Aliizi83/sample-golang-project/src/services"
 	"github.com/gin-gonic/gin"
@@ -20,7 +19,8 @@ type CountryHandler struct {
 
 func NewCountryHandler(cfg *config.Config) *CountryHandler {
 	logger := logging.NewLogger(cfg)
-	countryService := services.NewCountryService(cfg)
+	repository := dependencies.GetCountryRepository(cfg)
+	countryService := services.NewCountryService(cfg, repository)
 
 	return &CountryHandler{
 		cfg:            cfg,
@@ -35,28 +35,13 @@ func NewCountryHandler(cfg *config.Config) *CountryHandler {
 // @Tags Countries
 // @Accept json
 // @produces json
-// @Param Request body dto.CreateAndUpdateCountryRequest true "Create a country"
+// @Param Request body dto.CreateUpdateCountryRequest true "Create a country"
 // @Success 201 {object} helpers.BaseHttpResponse{result=dto.CountryResponse} "Country response"
 // @Failure 400 {object} helpers.BaseHttpResponse "Bad request"
 // @Router /v1/countries/ [post]
 // @Security AuthBearer
 func (h *CountryHandler) Create(c *gin.Context) {
-	req := dto.CreateAndUpdateCountryRequest{}
-	err := c.ShouldBindJSON(&req)
-	if err != nil {
-		c.AbortWithStatusJSON(http.StatusBadRequest,
-			helpers.GenerateBaseResponseWithValidationError(nil, false, int(helpers.ValidationError), err))
-		return
-	}
-
-	result, err := h.countryService.Create(c.Request.Context(), req)
-	if err != nil {
-		c.AbortWithStatusJSON(helpers.TranslateErrorToStatusCode(err),
-			helpers.GenerateBaseResponseWithError(nil, false, int(helpers.InternalError), err))
-		return
-	}
-
-	c.JSON(http.StatusCreated, helpers.GenerateBaseResponse(result, true, int(helpers.Success)))
+	Create(c, dto.ToCreateUpdateCountry, dto.ToCountryResponse, h.countryService.Create)
 }
 
 // UpdateCountry godoc
@@ -66,29 +51,13 @@ func (h *CountryHandler) Create(c *gin.Context) {
 // @Accept json
 // @produces json
 // @Param id path int true "Id"
-// @Param Request body dto.CreateAndUpdateCountryRequest true "Update a country"
+// @Param Request body dto.CreateUpdateCountryRequest true "Update a country"
 // @Success 201 {object} helpers.BaseHttpResponse{result=dto.CountryResponse} "Country response"
 // @Failure 400 {object} helpers.BaseHttpResponse "Bad request"
 // @Router /v1/countries/{id} [put]
 // @Security AuthBearer
 func (h *CountryHandler) Update(c *gin.Context) {
-	id, _ := strconv.Atoi(c.Params.ByName("id"))
-	req := dto.CreateAndUpdateCountryRequest{}
-	err := c.ShouldBindJSON(&req)
-	if err != nil {
-		c.AbortWithStatusJSON(http.StatusBadRequest,
-			helpers.GenerateBaseResponseWithValidationError(nil, false, int(helpers.ValidationError), err))
-		return
-	}
-
-	result, err := h.countryService.Update(c.Request.Context(), id, req)
-	if err != nil {
-		c.AbortWithStatusJSON(helpers.TranslateErrorToStatusCode(err),
-			helpers.GenerateBaseResponseWithError(nil, false, int(helpers.InternalError), err))
-		return
-	}
-
-	c.JSON(http.StatusCreated, helpers.GenerateBaseResponse(result, true, int(helpers.Success)))
+	Update(c, dto.ToCreateUpdateCountry, dto.ToCountryResponse, h.countryService.Update)
 }
 
 // DeleteCountry godoc
@@ -103,20 +72,7 @@ func (h *CountryHandler) Update(c *gin.Context) {
 // @Router /v1/countries/{id} [delete]
 // @Security AuthBearer
 func (h *CountryHandler) Delete(c *gin.Context) {
-	id, _ := strconv.Atoi(c.Params.ByName("id"))
-	if id == 0 {
-		c.AbortWithStatusJSON(http.StatusNotFound,
-			helpers.GenerateBaseResponse(nil, false, 121))
-		return
-	}
-	err := h.countryService.Delete(c.Request.Context(), id)
-	if err != nil {
-		c.AbortWithStatusJSON(helpers.TranslateErrorToStatusCode(err),
-			helpers.GenerateBaseResponseWithError(nil, false, int(helpers.InternalError), err))
-		return
-	}
-
-	c.JSON(http.StatusOK, helpers.GenerateBaseResponse(nil, true, 0))
+	Delete(c, h.countryService.Delete)
 }
 
 // GetCountry godoc
@@ -131,19 +87,20 @@ func (h *CountryHandler) Delete(c *gin.Context) {
 // @Router /v1/countries/{id} [get]
 // @Security AuthBearer
 func (h *CountryHandler) GetById(c *gin.Context) {
-	id, _ := strconv.Atoi(c.Params.ByName("id"))
-	if id == 0 {
-		c.AbortWithStatusJSON(http.StatusNotFound,
-			helpers.GenerateBaseResponse(nil, false, 121))
-		return
-	}
+	GetById(c, dto.ToCountryResponse, h.countryService.GetById)
+}
 
-	result, err := h.countryService.GetById(c.Request.Context(), id)
-	if err != nil {
-		c.AbortWithStatusJSON(helpers.TranslateErrorToStatusCode(err),
-			helpers.GenerateBaseResponseWithError(nil, false, 121, err))
-		return
-	}
-
-	c.JSON(http.StatusOK, helpers.GenerateBaseResponse(result, true, 0))
+// GetCountries godoc
+// @Summary Get Countries
+// @Description Get Countries
+// @Tags Countries
+// @Accept json
+// @produces json
+// @Param Request body filters.PaginationInputWithFilter true "Request"
+// @Success 200 {object} helpers.BaseHttpResponse{result=filters.PagedList[dto.CountryResponse]} "Country response"
+// @Failure 400 {object} helpers.BaseHttpResponse "Bad request"
+// @Router /v1/countries/get-by-filters [post]
+// @Security AuthBearer
+func (h *CountryHandler) GetByFilter(c *gin.Context) {
+	GetByFilter(c, dto.ToCountryResponse, h.countryService.GetByFilter)
 }
